<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BluetoothClient"
    android:background="#ff000000"
    android:clickable="true">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/photo_btn_name"
            android:background="#8B0000"
            android:clickable="true"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="#F5F5F5" />

        <TextView
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/video_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_btn_name"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="#0000A0"
            android:clickable="true"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="#F5F5F5" />
        </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_below="@id/linear_layout"
        android:layout_height="250dp"
        android:background="#111111"
        android:layout_alignParentEnd="true"
        android:fillViewport="false">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_name"
            android:textColor="#ffffff"
            android:textIsSelectable="true"
            android:id="@+id/debug_txt" />
    </ScrollView>

    <TextView
        android:id="@+id/rg_name"
        android:layout_below="@id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select your location:"
        android:textColor="#aaaaaa"/>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/rg_name"
        android:layout_x="5px">

        <RadioButton
            android:id="@+id/radiobutton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/radiobutton1"
            android:checked="true"
            android:clickable="true"
            android:singleLine="false"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radiobutton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/radiobutton2"
            android:enabled="true"
            android:checked="false"
            android:textSize="20dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/sb_name"
        android:layout_below="@id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\nSelect number of cars in your photo:"
        android:textColor="#aaaaaa"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_below="@id/sb_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="6"
        android:progress="0"
    />


</RelativeLayout>